@@ -1,3 +1,6 @@
+2011-09-21 Pierrick Caillon <pierrick@in-cite.net>
+	* Added API calls for PTReferential.ModeTypeList and MakeBinaryCriteria. Only ModeType support for MakeBinaryCriteria.
+
 2011-09-20 Pierrick Caillon <pierrick@in-cite.net>
 	* Added isDebugEnabled to debug class.
 
